--- a/computeEngine/requirements.txt
+++ b/computeEngine/requirements.txt
@@ -1,35 +1,40 @@
+beautifulsoup4==4.9.3
 cachetools==4.2.1
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
-google-api-core==1.26.3
-google-api-python-client==2.2.0
-google-auth==1.29.0
+google-api-core==1.26.2
+google-api-python-client==2.0.2
+google-auth==1.28.0
 google-auth-httplib2==0.1.0
+google-cloud==0.34.0
 google-cloud-core==1.6.0
-google-cloud-pubsub==2.4.1
-google-cloud-storage==1.37.1
+google-cloud-pubsub==2.3.0
+google-cloud-storage==1.37.0
 google-crc32c==1.1.2
 google-resumable-media==1.2.0
 googleapis-common-protos==1.53.0
 grpc-google-iam-v1==0.12.3
-grpcio==1.37.0
-httplib2==0.19.1
+grpcio==1.36.1
+httplib2==0.19.0
 idna==2.10
-libcst==0.3.18
+libcst==0.3.17
 mypy-extensions==0.4.3
 packaging==20.9
 proto-plus==1.18.1
-protobuf==3.15.8
+protobuf==3.15.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pyparsing==2.4.7
+pypiwin32==223
 pytz==2021.1
+pywin32==300
 PyYAML==5.4.1
 requests==2.25.1
 rsa==4.7.2
 six==1.15.0
+soupsieve==2.2.1
 typing-extensions==3.7.4.3
 typing-inspect==0.6.0
 uritemplate==3.0.1
